ItEr33S08ValidacionEProbasFuncionaisItEr32S09: Using static valueOf instead of inefficient constructor